--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -32,13 +32,16 @@ body {
     margin: 10px 10px;
 }
 
-.section{
-    display:block;
+.section {
+    display:flex;
     position: absolute;
+    align-items: center;
     font-size: 32px;
     font-weight: 100;
     text-align: center;
-    line-height: 720px;
+    justify-content: center;
+    // line-height: 720px;
+    height: 100%;
     transition: opacity 1s;
 }
 
