--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -6,7 +6,15 @@ div {
   cursor: pointer;
 }
 
+@font-face {
+  font-family: Radiotechnika;
+  src: url("../fonts/Radiotechnika.otf") format("opentype");
+  font-family: Enthalpy298;
+  font-weight: 600;
+  src: url("../fonts/Enthalpy298.otf") format("opentype");
+}
 body {
+  font-family: Enthalpy298;
   background-color: #269;
   background-image: linear-gradient(rgba(255, 255, 255, 0.5) 2px, transparent 2px), linear-gradient(90deg, rgba(255, 255, 255, 0.5) 2px, transparent 2px), linear-gradient(rgba(255, 255, 255, 0.28) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.28) 1px, transparent 1px);
   background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
@@ -32,13 +40,44 @@ body {
 .section {
   display: flex;
   position: absolute;
-  align-items: center;
-  font-size: 32px;
-  font-weight: 100;
+  font-size: 16px;
   text-align: center;
   justify-content: center;
   height: 100%;
+  border-radius: 20px;
   transition: opacity 1s;
+}
+
+.left-part__markup {
+  border-bottom-left-radius: 50%;
+  border-top-left-radius: 50%;
+  display: block;
+  width: 50%;
+  text-align: left;
+  padding: 40px;
+}
+
+.right-part__markup {
+  display: block;
+  width: 50%;
+  height: 100%;
+  border-bottom-right-radius: 50%;
+  border-top-right-radius: 50%;
+  background-color: #151515;
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 0%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.tech {
+  padding: 40px;
+  padding-top: 280px;
+}
+
+h1 {
+  text-align: right;
+  font-size: 80px;
+  color: #151515;
 }
 
 .page001 {
@@ -48,6 +87,7 @@ body {
   opacity: 0;
 }
 .page002 {
+  display: flex;
   width: 100%;
   background: red;
   color: aquamarine;
