Первая страница посвященная сайту пиццерии

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -8,6 +8,7 @@ body {
     margin:0 auto;
     //background-color: #3484BE;
     font-family:  'Inter', sans-serif;
+    -webkit-font-smoothing: antialiased;
     color: #000;
     overflow-x: hidden;
 }
