--- a/styles/base.css
+++ b/styles/base.css
@@ -5,6 +5,7 @@ body {
   max-width: 1280px;
   margin: 0 auto;
   font-family: "Inter", sans-serif;
+  -webkit-font-smoothing: antialiased;
   color: #000;
   overflow-x: hidden;
 }
