--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -1,20 +1,20 @@
 
-div {
-    user-select: none;
-    cursor:pointer;
-}
+// div {
+//     user-select: none;
+//     cursor:pointer;
+// }
 
 @font-face {
     font-family: Radiotechnika;
     src: url("../fonts/Radiotechnika.otf") format("opentype");
     font-family: Enthalpy298;
-    font-weight: 600;
     src: url("../fonts/Enthalpy298.otf") format("opentype");
 }
 
 body {
     // font-family: Radiotechnika;
     font-family: Enthalpy298;
+    font-weight: 100;
     background-color: #269;
     background-image:
         linear-gradient(rgba(255,255,255,.5) 2px, transparent 2px),
@@ -43,7 +43,7 @@ body {
 }
 
 .section {
-    display:flex;
+    display:none;
     position: absolute;
     // align-items: center;
     font-size: 16px;
@@ -71,9 +71,32 @@ body {
     border-bottom-right-radius: 50%;
     border-top-right-radius: 50%;
     background-color: #151515;
-    background: linear-gradient(180deg, rgba(15,15,15,0) 0%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/pizzaville/present.jpg");
+    text-align: left;
+
+    background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/pizzaville/present.jpg");
     background-size:contain;
     background-repeat: no-repeat;
+}
+
+ul {
+    list-style-type: circle;
+    line-height: 1.2em;
+}
+
+a {
+    text-decoration: none;
+    color: aquamarine;
+    cursor:pointer;
+}
+
+.left-part__markup h2 {
+    font-size: 36px;
+}
+
+.left-part__markup h3 {
+    color:#151515;
+    font-size: 52px;
+    padding-left: 80px;
 }
 
 .tech {
@@ -85,6 +108,7 @@ h1 {
     text-align: right;
     font-size: 80px;
     color:#151515;
+    padding-bottom: 68px;
 }
 
 .page {
@@ -140,4 +164,5 @@ h1 {
 
 .showed {
     opacity: 1;
+    display: flex;
 }
