--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -1,20 +1,12 @@
-div {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  cursor: pointer;
-}
-
 @font-face {
   font-family: Radiotechnika;
   src: url("../fonts/Radiotechnika.otf") format("opentype");
   font-family: Enthalpy298;
-  font-weight: 600;
   src: url("../fonts/Enthalpy298.otf") format("opentype");
 }
 body {
   font-family: Enthalpy298;
+  font-weight: 100;
   background-color: #269;
   background-image: linear-gradient(rgba(255, 255, 255, 0.5) 2px, transparent 2px), linear-gradient(90deg, rgba(255, 255, 255, 0.5) 2px, transparent 2px), linear-gradient(rgba(255, 255, 255, 0.28) 1px, transparent 1px), linear-gradient(90deg, rgba(255, 255, 255, 0.28) 1px, transparent 1px);
   background-size: 100px 100px, 100px 100px, 20px 20px, 20px 20px;
@@ -38,7 +30,7 @@ body {
 }
 
 .section {
-  display: flex;
+  display: none;
   position: absolute;
   font-size: 16px;
   text-align: center;
@@ -64,9 +56,31 @@ body {
   border-bottom-right-radius: 50%;
   border-top-right-radius: 50%;
   background-color: #151515;
-  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 0%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present.jpg");
+  text-align: left;
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present.jpg");
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+ul {
+  list-style-type: circle;
+  line-height: 1.2em;
+}
+
+a {
+  text-decoration: none;
+  color: aquamarine;
+  cursor: pointer;
+}
+
+.left-part__markup h2 {
+  font-size: 36px;
+}
+
+.left-part__markup h3 {
+  color: #151515;
+  font-size: 52px;
+  padding-left: 80px;
 }
 
 .tech {
@@ -78,6 +92,7 @@ h1 {
   text-align: right;
   font-size: 80px;
   color: #151515;
+  padding-bottom: 68px;
 }
 
 .page001 {
@@ -124,4 +139,5 @@ h1 {
 
 .showed {
   opacity: 1;
+  display: flex;
 }/*# sourceMappingURL=anim-easy-slider-styles.css.map */
