--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -24,11 +24,126 @@ body {
   align-items: center;
 }
 
-.button {
-  width: 200px;
-  margin: 10px 10px;
+.button-decor {
+  border-top: 2px solid grey;
+  width: 70px;
+  height: 30px;
+  background: red;
 }
 
+.start-button {
+  margin: 33px 0 0 5px;
+  width: 100px;
+  height: 100px;
+  background: #151515;
+  color: aliceblue;
+  border-radius: 50%;
+  transform: rotate(45deg);
+  font-family: Enthalpy298;
+  letter-spacing: 3px;
+  font-size: 24px;
+}
+
+.start-button:active {
+  -webkit-animation: clicked 0.2s;
+          animation: clicked 0.2s;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+          animation-fill-mode: none;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-name: clicked;
+          animation-name: clicked;
+}
+
+@-webkit-keyframes clicked {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes clicked {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.button {
+  width: 50px;
+  height: 50px;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  margin: 10px 10px;
+  background: #151515;
+  color: whitesmoke;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.button:active {
+  -webkit-animation: clicked2 0.2s;
+          animation: clicked2 0.2s;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+          animation-fill-mode: none;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-name: clicked2;
+          animation-name: clicked2;
+}
+
+@-webkit-keyframes clicked2 {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: translate(0px, 28px) scale(1, 1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes clicked2 {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: translate(0px, 28px) scale(1, 1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 .section {
   display: none;
   position: absolute;
@@ -57,7 +172,8 @@ body {
   border-top-right-radius: 50%;
   background-color: #151515;
   text-align: left;
-  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present.jpg");
+  letter-spacing: 1px;
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present_f.jpg");
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -85,7 +201,7 @@ a {
 
 .tech {
   padding: 40px;
-  padding-top: 280px;
+  padding-top: 250px;
 }
 
 h1 {
