--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -32,16 +32,39 @@ body {
 }
 
 .start-button {
+  display: block;
   margin: 33px 0 0 5px;
   width: 100px;
   height: 100px;
   background: #151515;
   color: aliceblue;
+  cursor: pointer;
   border-radius: 50%;
   transform: rotate(45deg);
   font-family: Enthalpy298;
   letter-spacing: 3px;
   font-size: 24px;
+}
+
+.start-button:hover {
+  -webkit-animation: clicked 0.2s;
+          animation: clicked 0.2s;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+          animation-fill-mode: none;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-name: clicked_h;
+          animation-name: clicked_h;
 }
 
 .start-button:active {
@@ -66,26 +89,24 @@ body {
 }
 
 @-webkit-keyframes clicked {
-  0% {
-    transform: scale(1);
-  }
   50% {
     transform: scale(2);
-  }
-  100% {
-    transform: scale(1);
   }
 }
 
 @keyframes clicked {
-  0% {
-    transform: scale(1);
-  }
   50% {
     transform: scale(2);
   }
-  100% {
-    transform: scale(1);
+}
+@-webkit-keyframes clicked_h {
+  50% {
+    transform: rotate(45deg) scale(1.1);
+  }
+}
+@keyframes clicked_h {
+  50% {
+    transform: rotate(45deg) scale(1.1);
   }
 }
 .button {
@@ -98,6 +119,27 @@ body {
   color: whitesmoke;
   cursor: pointer;
   font-size: 24px;
+}
+
+.button:hover {
+  -webkit-animation: clicked2 0.2s;
+          animation: clicked2 0.2s;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-timing-function: ease;
+          animation-timing-function: ease;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-direction: normal;
+          animation-direction: normal;
+  -webkit-animation-fill-mode: none;
+          animation-fill-mode: none;
+  -webkit-animation-play-state: running;
+          animation-play-state: running;
+  -webkit-animation-name: clicked2_h;
+          animation-name: clicked2_h;
 }
 
 .button:active {
@@ -121,27 +163,25 @@ body {
           animation-name: clicked2;
 }
 
-@-webkit-keyframes clicked2 {
-  0% {
-    transform: scale(1);
-  }
+@-webkit-keyframes clicked2_h {
   50% {
-    transform: translate(0px, 28px) scale(1, 1.5);
-  }
-  100% {
-    transform: scale(1);
+    transform: translate(0px, 3px) scale(1, 1.1);
   }
 }
 
-@keyframes clicked2 {
-  0% {
-    transform: scale(1);
+@keyframes clicked2_h {
+  50% {
+    transform: translate(0px, 3px) scale(1, 1.1);
   }
+}
+@-webkit-keyframes clicked2 {
   50% {
     transform: translate(0px, 28px) scale(1, 1.5);
   }
-  100% {
-    transform: scale(1);
+}
+@keyframes clicked2 {
+  50% {
+    transform: translate(0px, 28px) scale(1, 1.5);
   }
 }
 .section {
