--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -141,7 +141,7 @@ body {
   padding-left: 80px;
 }
 
-.right-part__markup {
+.description-part__markup {
   display: block;
   width: 50%;
   height: 100%;
@@ -150,9 +150,6 @@ body {
   background-color: #151515;
   text-align: left;
   letter-spacing: 1px;
-  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present_f.jpg");
-  background-size: contain;
-  background-repeat: no-repeat;
 }
 
 ul {
@@ -166,22 +163,35 @@ a {
   cursor: pointer;
 }
 
-.tech {
+.description-wanted {
+  color: #151515;
+  font-size: 32px;
+  letter-spacing: 2px;
+}
+.description-pizza {
   padding: 40px;
   padding-top: 260px;
 }
+.description-house {
+  padding: 40px;
+  padding-top: 375px;
+}
 
-.poster-wanted {
+.background-wanted {
   height: 100%;
   background-image: url(../Pages/intro/developer.jpg);
   background-size: contain;
   background-repeat: no-repeat;
 }
-
-.intro-text {
-  color: #151515;
-  font-size: 32px;
-  letter-spacing: 2px;
+.background-pizza {
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/pizzaville/present_f.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.background-house {
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/oknahouse/preview.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .page001 {
