--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -27,14 +27,14 @@ body {
 
 // Кнопка запуска страницы
 .start-button {
-    margin: 33px 0 0 5px;
+    // margin: 33px 0 0 5px;
     width: 100px;
     height: 100px;
     background: #151515;
     color:aliceblue;
     cursor: pointer;
     border-radius: 50%;
-    transform: rotate(45deg);
+    // transform: rotate(45deg);
     font-family: Enthalpy298;
     letter-spacing: 3px;
     font-size: 24px;
@@ -58,6 +58,17 @@ body {
     50% {
         transform: rotate(45deg) scale(1.1);
     }
+}
+
+//индивидуальные неастройки стартовых кнопок
+.pizza-start {
+    margin: 33px 0 0 5px;
+    transform: rotate(45deg);
+}
+
+.house-start {
+    margin: 33px 0 0 409px;
+    transform: rotate(-45deg);
 }
 
 //Блок кнопок интерфейса
@@ -145,9 +156,6 @@ body {
     background-color: #151515;
     text-align: left;
     letter-spacing: 1px;
-    // background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/pizzaville/present_f.jpg");
-    // background-size:contain;
-    // background-repeat: no-repeat;
 }
 
 ul {
@@ -248,6 +256,11 @@ a {
         position: relative;
         height: 720px;
     }
+}
+
+.hr-limiter {
+    margin-inline-start: 0;
+    width: 430px;
 }
 
 .showed {
