--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -19,14 +19,12 @@ body {
 }
 
 .start-button {
-  margin: 33px 0 0 5px;
   width: 100px;
   height: 100px;
   background: #151515;
   color: aliceblue;
   cursor: pointer;
   border-radius: 50%;
-  transform: rotate(45deg);
   font-family: Enthalpy298;
   letter-spacing: 3px;
   font-size: 24px;
@@ -61,6 +59,16 @@ body {
     transform: rotate(45deg) scale(1.1);
   }
 }
+.pizza-start {
+  margin: 33px 0 0 5px;
+  transform: rotate(45deg);
+}
+
+.house-start {
+  margin: 33px 0 0 409px;
+  transform: rotate(-45deg);
+}
+
 .buttons {
   display: flex;
   justify-content: center;
@@ -233,6 +241,12 @@ a {
 .pages-row {
   position: relative;
   height: 720px;
+}
+
+.hr-limiter {
+  -webkit-margin-start: 0;
+          margin-inline-start: 0;
+  width: 430px;
 }
 
 .showed {
