feat: Добавлены прототипы всех веб-слайдов

--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -215,6 +215,16 @@ a {
   background-size: cover;
   background-repeat: no-repeat;
 }
+.background-bagames {
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/base/preview-bagamy.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.background-slider {
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/base/preview-slider.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
 .page001 {
   width: 100%;
