--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -221,6 +221,18 @@ a {
         background-size:cover;
         background-repeat: no-repeat;
     }
+
+    &-bagames {
+        background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/base/preview-bagamy.jpg");
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
+
+    &-slider {
+        background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/base/preview-slider.jpg");
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
 }
 
 .page {
