--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -125,7 +125,15 @@ body {
     position: absolute;
     height: 100%;
     border-radius: 20px;
-    transition: opacity 1s;
+    animation: slide-open 0.5s;
+    //transition: opacity 1s;
+}
+
+@keyframes slide-open {
+    20% {
+//        transform: translate(0px, 180px) scale(0.5,0.5);
+        transform: translate(0px, 14px) scale(0.96,0.96);
+    }
 }
 
 .title-part__markup {
