--- a/works/styles/anim-easy-slider-styles.css
+++ b/works/styles/anim-easy-slider-styles.css
@@ -295,6 +295,14 @@ a {
   padding: 40px;
   padding-top: 360px;
 }
+.description-tools {
+  padding: 40px;
+  padding-top: 254px;
+}
+.description-other {
+  padding: 40px;
+  padding-top: 254px;
+}
 
 .background-wanted {
   height: 100%;
@@ -334,6 +342,11 @@ a {
 }
 .background-slaine {
   background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 50%, rgb(2, 0, 36) 70%), url("../Pages/slaine/preview.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.background-tools {
+  background: linear-gradient(180deg, rgba(15, 15, 15, 0) 10%, rgb(1, 1, 37) 30%, rgb(2, 0, 36) 90%), url("../Pages/tools/preview.png");
   background-size: contain;
   background-repeat: no-repeat;
 }
