feat: добавлен прототип страницы это другое

--- a/works/scss/anim-easy-slider-styles.scss
+++ b/works/scss/anim-easy-slider-styles.scss
@@ -294,7 +294,7 @@ a {
         padding-top: 254px;
     }
 
-    &-other {
+    &-others {
         padding: 40px;
         padding-top: 254px;
     }
@@ -353,6 +353,12 @@ a {
 
     &-tools {
         background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 30%, rgba(2,0,36,1) 90%), url("../Pages/tools/preview.png");
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
+
+    &-others {
+        background: linear-gradient(180deg, rgba(15,15,15,0) 10%, rgba(1,1,37,1) 50%, rgba(2,0,36,1) 70%), url("../Pages/others/preview.jpg");
         background-size:contain;
         background-repeat: no-repeat;
     }
